# Vulkr

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp  app.h  fluid_simulation.cpp  fluid_simulation.h  main.cpp  vulkr.cpp  vulkr.h
assets/gltf_models/cathedral/: license.txt
assets/gltf_models/flat_plane_ground_floor/: flat_plane_ground_floor.gltf  license.txt
assets/gltf_models/floor_stones_tilleable/: floor_stones_tilleable.gltf  license.txt
assets/gltf_models/the_odd_sphere/: license.txt  the_odd_sphere.gltf
shaders/: common.glsl  compile_shaders.bat  random.glsl
shaders/fluid_simulation/: densityAdvection.comp  divergence.comp  jacobi.comp
shaders/particle_system/: particleCalculate.comp  particleIntegrate.comp
shaders/post_processing/: postProcess.frag  postProcess.vert
shaders/rasterization/: deferredShading.frag  material_pbr.frag  mrtGeometryBuffer.frag  mrtGeometryBuffer.vert  pbr.frag
shaders/ray_tracing/: raytrace.rchit  raytrace.rgen  raytrace.rmiss
shaders/spv/: animate.comp.spv
shaders/spv/fluid_simulation/: densityAdvection.comp.spv  gradient.comp.spv  velocityAdvection.comp.spv
shaders/spv/particle_system/: particleCalculate.comp.spv  particleIntegrate.comp.spv
shaders/spv/post_processing/: postProcess.frag.spv  postProcess.vert.spv
shaders/spv/rasterization/: deferredShading.frag.spv  deferredShading.vert.spv  main.frag.spv  main.vert.spv  material_pbr.frag.spv  mrtGeometryBuffer.frag.spv  mrtGeometryBuffer.vert.spv  pbr.frag.spv  pbr.vert.spv
shaders/spv/ray_tracing/: raytrace.rchit.spv  raytraceShadow.rmiss.spv
src/: CMakeLists.txt  VulkRender.sln  VulkRender.vcxproj  Vulkr.filters  Vulkr.sln  Vulkr.vcxproj  Vulkr.vcxproj.filters  device.cpp  device.h  instance.cpp  instance.h  logger.h  main.cpp  physical_device.cpp  physical_device.h  queue.cpp  queue.h  vk_common.cpp  vk_common.h  window.cpp  window.h
src/common/: debug_util.cpp  debug_util.h  fence_pool.cpp  fence_pool.h  gltf_loader.cpp  gltf_loader.h  helpers.h  logger.h  obj_loader.cpp  obj_loader.h  semaphore_pool.cpp  semaphore_pool.h  strings.cpp  strings.h  timer.cpp  timer.h  vk_common.h  vulkan_common.cpp  vulkan_common.h
src/core/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  fence_pool.cpp  fence_pool.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h  semaphore_pool.cpp  semaphore_pool.h  swapchain.cpp  swapchain.h
src/platform/: application.cpp  application.h  input_event.cpp  input_event.h  platform.cpp  platform.h  window.cpp  window.h
src/rendering/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  gltf_loader.cpp  gltf_loader.h  obj_loader.cpp  pipeline_state.cpp  pipeline_state.h  shader_module.cpp  shader_module.h  subpass.cpp  subpass.h
src/shaders/: animate.comp  build.bat  common.glsl  default.frag  default.frag.spv  fluidAdvection.comp  frag.spv  jacobi.comp  main.frag  main.vert  main.vert.spv  particleCalculate.comp  particleIntegrate.comp  postProcess.frag  postProcess.vert  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceShadow.rmiss  shader.frag  shader.vert  textured.frag  textured.frag.spv
src/shaders/fluid_simulation/: densityAdvection.comp  densityGaussianSplat.comp  divergence.comp  fluidAdvection.comp  gaussianSplat.comp  gradient.comp  jacobi.comp  velocityAdvection.comp  velocityGaussianSplat.comp
src/shaders/particle_system/: particleCalculate.comp  particleIntegrate.comp
src/shaders/post_processing/: postProcess.frag  postProcess.vert
src/shaders/rasterization/: main.frag  main.vert  material_pbr.frag  pbr.vert
src/shaders/ray_tracing/: raytrace.rchit
src/shaders/spv/: animate.comp.spv  default.frag.spv  fluidAdvection.comp.spv  jacobi.comp.spv  main.frag.spv  main.vert.spv  particleCalculate.comp.spv  particleIntegrate.comp.spv  postProcess.frag.spv  postProcess.vert.spv  raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv  raytraceShadow.rmiss.spv  textured.frag.spv
src/shaders/spv/fluid_simulation/: densityAdvection.comp.spv  densityGaussianSplat.comp.spv  divergence.comp.spv  fluidAdvection.comp.spv  gaussianSplat.comp.spv  gradient.comp.spv  jacobi.comp.spv  velocityAdvection.comp.spv  velocityGaussianSplat.comp.spv
src/shaders/spv/particle_system/: particleCalculate.comp.spv  particleIntegrate.comp.spv
src/shaders/spv/post_processing/: postProcess.frag.spv  postProcess.vert.spv
src/shaders/spv/rasterization/: main.frag.spv  main.vert.spv  material_pbr.frag.spv  pbr.vert.spv
src/shaders/spv/ray_tracing/: raytrace.rchit.spv  raytrace.rgen.spv  raytrace.rmiss.spv  raytraceShadow.rmiss.spv
